<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.dog.EditDogActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextPrimary"
        android:padding="8dp" />
    <TextView
        android:id="@+id/lb_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/head"
        android:text="@string/lb_name"
        >
    </TextView>
    <EditText
        android:id="@+id/et_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lb_name"
        android:hint="@string/lb_name"
        >
    </EditText>
    <Button
        android:id="@+id/bt_add_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_race"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        >
    </Button>
    <TextView
        android:id="@+id/lb_race"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_add_race"
        android:text="@string/lb_race"
        >
    </TextView>
    <Spinner
        android:id="@+id/spinner_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintTop_toBottomOf="@id/lb_race"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/lb_description"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner_race"
        android:text="@string/lb_description"
        >
    </TextView>
    <EditText
        android:id="@+id/et_description"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lb_description"
        android:hint="@string/lb_description">
    </EditText>
    <TextView
        android:id="@+id/lb_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        android:text="@string/lb_date"
        >
    </TextView>

    <EditText
        android:id="@+id/et_date"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lb_date"
        android:hint="@string/date">
    </EditText>

    <Button
        android:id="@+id/bt_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_date"
        android:onClick="onClickUpdate"
        android:text="@string/bt_edit">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>