<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.race.AddRaceActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextPrimary"
        android:padding="8dp" />

    <TextView
        android:id="@+id/lb_race"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/head"
        android:text="@string/lb_race"
        >
    </TextView>

    <EditText
        android:id="@+id/et_race"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lb_race"
        android:hint="@string/lb_race"
        >
    </EditText>

    <Button
        android:id="@+id/bt_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_race"
        android:text="@string/bt_validate">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>